@@ -6,7 +6,9 @@ import com.jetbrains.youtrackdb.internal.common.log.LogManager;
 import com.jetbrains.youtrackdb.internal.core.config.YouTrackDBConfig;
 import com.jetbrains.youtrackdb.internal.core.db.YouTrackDBImpl;
 import com.jetbrains.youtrackdb.internal.core.db.YouTrackDBInternal;
+import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.concurrent.ConcurrentHashMap;
@@ -15,8 +17,11 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import org.apache.commons.configuration2.Configuration;
 import org.apache.tinkerpop.gremlin.structure.Graph;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class YTDBGraphFactory {
+  private static final Logger logger = LoggerFactory.getLogger(YTDBGraphFactory.class);
 
   /// Path to the root folder that contains all embedded databases managed by [YouTrackDB], this
   /// parameter is used only in [org.apache.tinkerpop.gremlin.structure.util.GraphFactory]
@@ -116,24 +121,44 @@ public class YTDBGraphFactory {
       String dbPath, Supplier<YouTrackDBInternal> internalSupplier) {
     var path = Path.of(dbPath).toAbsolutePath().normalize();
     return storagePathYTDBMap.compute(path, (p, youTrackDB) -> {
-      if (youTrackDB != null) {
+      if (youTrackDB != null && youTrackDB.isOpen()) {
         return youTrackDB;
       }
 
       return new YouTrackDBImpl(internalSupplier.get());
     });
+
   }
 
   @Nullable
   public static YouTrackDB getYTDBInstance(String dbPath) {
-    var path = Path.of(dbPath).toAbsolutePath().normalize();
-    return storagePathYTDBMap.get(path);
+    var path = Path.of(dbPath);
+    try {
+      path = path.toRealPath();
+    } catch (IOException e) {
+      logger.error("Can not retrieve real path for {}", dbPath, e);
+      path = path.toAbsolutePath().normalize();
+    }
+
+    var ytdb = storagePathYTDBMap.get(path);
+    if (ytdb == null || !ytdb.isOpen()) {
+      return null;
+    }
+
+    return ytdb;
+
   }
 
   public static void unregisterYTDBInstance(@Nonnull YouTrackDBImpl youTrackDB,
       @Nullable Runnable onCloseCallback) {
     var ytdbInternal = youTrackDB.internal;
-    var path = Path.of(ytdbInternal.getBasePath()).toAbsolutePath().normalize();
+    var path = Paths.get(ytdbInternal.getBasePath());
+    try {
+      path = path.toRealPath();
+    } catch (IOException e) {
+      logger.error("Can not retrieve real path for {}", path, e);
+      path = path.toAbsolutePath().normalize();
+    }
 
     storagePathYTDBMap.compute(path, (p, ytdb) -> {
       if (ytdb == youTrackDB) {
@@ -142,9 +167,15 @@ public class YTDBGraphFactory {
         }
 
         return null;
+      } else {
+        if (ytdb != null) {
+          throw new IllegalStateException(
+              "There is another YTDB instance registered for the same path: " + p);
+        } else {
+          throw new IllegalStateException(
+              "There is no YTDB instance registered for the path: " + p);
+        }
       }
-
-      return ytdb;
     });
   }
 
@@ -152,8 +183,10 @@ public class YTDBGraphFactory {
     var ytdbs = new HashMap<>(storagePathYTDBMap);
     ytdbs.values().forEach(ytdb -> {
       try {
-        //will be removed from storagePathYTDBMap in [unregisterYTDBInstance]
-        ytdb.close();
+        if (ytdb.isOpen()) {
+          //will be removed from storagePathYTDBMap in [unregisterYTDBInstance]
+          ytdb.close();
+        }
       } catch (Exception e) {
         LogManager.instance()
             .error(YTDBGraphFactory.class, "Error closing of YouTrackDB instance", e);
